added viewport meta and married content

--- a/index.html
+++ b/index.html
@@ -1,12 +1,16 @@
 <!DOCTYPE html>
 	<head>
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<link rel="stylesheet" href="css/main.css">
 		<link href="https://fonts.googleapis.com/css?family=Open+Sans:300" rel="stylesheet">
 		<title>Gennoy</title>
 	</head>
 	<body>
 		<div class="background">
-			<h1>Gennoy.com</h1>
+			<div class="main">
+				<h1>Gennoy.com</h1>
+				<h5>We've been married <span>34,567</span> days</h5>
+			</div>
 		<div>
 	</body>
 </html>
