Added days married calculation.

--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@
 		<div class="background">
 			<div class="main">
 				<h1>Gennoy.com</h1>
-				<h5>We've been married <span>34,567</span> days</h5>
+				<h5>We've been married <span class="days-married">many</span> days</h5>
 			</div>
 		<div>
+		<script src="scripts/main.js"></script>
 	</body>
 </html>
